<resources>
    <string name="app_name">appencomienda</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menuadmi">menuadmi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="titulo_registro_encomienda">Registro de encomienda</string>
    <string name="reg_DNI">DNI</string>
    <string name="username_reg">Username</string>
    <string name="pass_reg">Password</string>
    <string name="reg_apellidos">Apellidos:</string>
    <string name="reg_nombres">Nombres:</string>
    <string name="reg_costo">Costo</string>
    <string name="reg_producto">Encomienda</string>
    <string name="reg_destino">Destino</string>
    <string name="d">Producto</string>
    <string name="titulo_editar">Editar Encomienda</string>
    <string name="btn_editar">Editar</string>
    <string name="item_encomienda">Encomienda</string>
    <string name="item_dni">DNI</string>
    <string name="item_nameApellidos">nombres apellidos</string>
    <string name="item_precio">Precio</string>
    <string name="item_estado">Estado</string>
    <string name="busc_titulo">Busqueda de encomienda</string>
    <string name="busc_DNI">Ingrese su DNI</string>
    <string name="busc_btn_buscar">Buscar</string>

    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_buscar_dni">Buscar</string>
    <string name="titulo_home">Encomiendas</string>
    <string name="titulo_inform">Informe de encomiendas </string>
    <string name="btn_buscar">Rastrear pedidos</string>
    <string name="distrito_reg">Distrito</string>
    <string name="edad_reg">edad</string>
    <string name="genero_reg">Genero:</string>
    <string name="genero_2_reg">Femenino</string>
    <string name="genero_1_reg">Masculino</string>
    <string name="btn_registrar_reg">Registrar</string>
    <string name="btn_atras_reg">Atras</string>
    <string name="title_reg">Formulario de registro</string>
    <string name="llenar_home">llenar</string>
    <string name="wel_home">Bienvenido</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_iniciar">INICIAR SESION</string>
    <string name="btn_registrar">Registrar Pedido</string>
    <string name="btn_registrar_encomiendas">Registrar Encomiendas</string>
    <string name="btn_encomiendas">Encomiendas</string>
    <string name="btn_informes">Informes</string>
    <string name="item_destino">Destino</string>
    <string name="title_login">Encomiendas PERU S.A.C.</string>
    <string name="btn_rastrear">Rastrear Encomienda (CLIENTE)</string>
    <string name="btn_inicio_login">Login (Admi)</string>

</resources>