<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroEncomiendaActivity">

    <EditText
        android:id="@+id/regDestino"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/reg_destino"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPrecio" />

    <EditText
        android:id="@+id/regEncomienda"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_producto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPrecio" />

    <EditText
        android:id="@+id/regPrecio"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_costo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regApellidos" />

    <EditText
        android:id="@+id/regApellidos"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNombres" />

    <EditText
        android:id="@+id/regDni"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/reg_DNI"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/titulo_registro_encomienda"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regNombres"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_nombres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regDni" />

    <Button
        android:id="@+id/btnRegEncomienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/btn_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEncomienda" />

    <Button
        android:id="@+id/reg_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="291dp"
        android:layout_marginRight="291dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegEncomienda" />

</androidx.constraintlayout.widget.ConstraintLayout>