<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.EncomiendaEdit">

    <EditText
        android:id="@+id/edit2Destino"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:hint="@string/reg_producto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrecio2" />

    <EditText
        android:id="@+id/editEncomienda2"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_producto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrecio2" />

    <EditText
        android:id="@+id/editPrecio2"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_costo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editApellidos2" />

    <EditText
        android:id="@+id/editApellidos2"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNombres2" />

    <EditText
        android:id="@+id/editDni2"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/reg_DNI"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/titulo_registro_encomienda"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNombres2"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_nombres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDni2" />

    <Button
        android:id="@+id/edit_btn_Editar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/btn_editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEncomienda2"
        app:layout_constraintVertical_bias="0.797" />

    <Spinner
        android:id="@+id/tvspinnerEstado2"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"

        app:layout_constraintBottom_toTopOf="@+id/edit_btn_Editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEncomienda2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/editVolver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="276dp"
        android:layout_marginRight="276dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_btn_Editar2" />

</androidx.constraintlayout.widget.ConstraintLayout>